--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="widget green-widget animated-widget">
                 <h2>ChatGPT</h2>
-                <iframe src="https://chat.openai.com/chat" style="border: 0; width: 100%; height: 400px; border-radius: 10px;" frameborder="0"></iframe>
+                <iframe src="https://chat.openai.com" style="border: 0; width: 100%; height: 400px; border-radius: 10px;" frameborder="0"></iframe>
             </div>
         </section>
     </main>
