--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         <section class="button-section">
             <a href="https://maxnt2017.github.io/excelweb_max21k/" target="_blank" class="green-button">Excel</a>
-            </section>
+            <a href="https://chat.openai.com/" target="_blank" class="green-button">ChatGPT | OpenAI</a>
+        </section>
 
         <section class="widgets-grid">
             <div class="widget green-widget animated-widget">
@@ -44,8 +45,8 @@
             </div>
 
             <div class="widget green-widget animated-widget">
-                <h2>ChatGPT</h2>
-                <iframe src="https://chat.openai.com" style="border: 0; width: 100%; height: 400px; border-radius: 10px;" frameborder="0"></iframe>
+                <h2>Deepl Перекладач</h2>
+                <iframe src="https://www.deepl.com/translator" style="border: 0; width: 100%; height: 400px; border-radius: 10px;" frameborder="0"></iframe>
             </div>
         </section>
     </main>
